# llming-docs

./: .gitignore  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
apps/mail/: .env.template  .gitignore  README.md  push.py  web_app.py
apps/mail/static/: app.css  app.js  index.html  mail_cache.js  mail_client.js  mail_hooks.js
docs/: api-design.md  docs-vs-rich-mcp.md  index.md  principles.md  types.md
docs/api/: rendering.md  stores.md
docs/concepts/: embedding.md  history-undo.md  mcp-servers.md  validation.md
docs/integration/: docking.md  extending.md  frontend-assets.md
llming_docs/: __init__.py  client_payload.py  creator_mcp.py  document_store.py  email_mcp.py  history.py  html_exporter.py  html_mcp.py  manager.py  ops_dispatcher.py  plotly_mcp.py  pptx_exporter.py  presentation_mcp.py  render.py  table_exporter.py  table_mcp.py  text_doc_mcp.py  transport.py  unified_mcp.py  validators.py  word_exporter.py
llming_docs/chart/: __init__.py
llming_docs/email/: __init__.py  mcp.py
llming_docs/frontend/: __init__.py
llming_docs/frontend/static/css/: doc-plugins.css
llming_docs/frontend/static/plugins/: ai-edit-shared.js  doc-plugin-registry.js  doc-plugins.js
llming_docs/latex/: __init__.py
llming_docs/pdf/: __init__.py  reader.py
llming_docs/providers/: README.md  __init__.py  base.py  models.py
llming_docs/providers/gmail/: __init__.py
llming_docs/providers/mock/: __init__.py  faces.py  fixtures.py
llming_docs/providers/msgraph/: __init__.py
llming_docs/sheet/: __init__.py  mcp.py  xlsx_migrate.py  xlsx_ops.py  xlsx_storage.py  xlsx_view.py
llming_docs/slides/: __init__.py  exporter.py  mcp.py
llming_docs/text/: __init__.py  mcp.py
llming_docs/web/: __init__.py  mcp.py
