[tool.poetry]
name = "llming-docs"
version = "0.1.0"
description = "Document plugin system — rich document creation and editing via MCP tools"
authors = ["Michael Ikemann"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Alyxion/llming-docs"
homepage = "https://github.com/Alyxion/llming-docs"
keywords = ["documents", "mcp", "plotly", "tables", "presentations", "email"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: Markup",
    "Programming Language :: Python :: 3.12",
]
packages = [{include = "llming_docs"}]

[tool.poetry.urls]
"Author" = "https://github.com/Alyxion"

[tool.poetry.dependencies]
python = ">=3.14"
pydantic = "*"
llming-models = ">=0.1.0"

# Optional export dependencies
python-docx = {version = ">=1.2", optional = true}
python-pptx = {version = ">=1.0", optional = true}
openpyxl = {version = ">=3.1", optional = true}

[tool.poetry.extras]
word = ["python-docx"]
pptx = ["python-pptx"]
excel = ["openpyxl"]
all = ["python-docx", "python-pptx", "openpyxl"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["llming_docs.pptx_exporter", "llming_docs.word_exporter"]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "llming_docs.plotly_mcp",
    "llming_docs.table_mcp",
    "llming_docs.text_doc_mcp",
    "llming_docs.html_mcp",
    "llming_docs.email_mcp",
    "llming_docs.creator_mcp",
    "llming_docs.presentation_mcp",
]
disable_error_code = ["union-attr", "assignment", "arg-type", "misc"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
